--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "vinyl-source-stream": "^2.0.0"
   },
   "dependencies": {
+    "express": "^4.17.1",
     "jquery": "^3.3.1",
     "normalize.css": "^7.0.0"
   }
