--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "browser-sync": "^2.23.6",
     "browserify": "^15.2.0",
     "del": "^3.0.0",
+    "formidable": "^1.2.1",
     "gulp": "4.0.0",
     "gulp-autoprefixer": "^6.0.0",
     "gulp-cheerio": "^0.6.3",
@@ -35,6 +36,7 @@
     "gulp-uglify": "^3.0.0",
     "gulp.spritesmith": "^6.9.0",
     "merge-stream": "^1.0.1",
+    "nconf": "^0.10.0",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0"
   },
